tooling/nargo_cli/tests/snapshots/execution_success/u128_type/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: u128, y: u128, z: u8) {
    let const_x: u128 = 12345;
    let const_y: u128 = 2345678;
    let const_z: u8 = 2;
    assert((x + y) == (const_x + const_y));
    assert((y - x) == (const_y - const_x));
    assert((x * y) == (const_x * const_y));
    assert((y / x) == (const_y / const_x));
    assert((y % x) == (const_y % const_x));
    assert(!x == !const_x);
    assert((x ^ y) == (const_x ^ const_y));
    assert((x & y) == (const_x & const_y));
    assert((x | y) == (const_x | const_y));
    assert((x >> z) == (const_x >> const_z));
    assert((x << z) == (const_x << const_z));
    assert((x < y) == (const_x < const_y));
    assert((x <= y) == (const_x <= const_y));
    assert((x != y) == (const_x != const_y));
    assert((y > x) == (const_y > const_x));
    assert((y >= x) == (const_y >= const_x));
}
