tooling/nargo_cli/tests/snapshots/execution_success/u128_type/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 128
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 128
        },
        "visibility": "private"
      },
      {
        "name": "z",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 128
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      },
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "5795655218219125583": {
        "error_kind": "string",
        "string": "Field failed to decompose into specified 8 limbs"
      },
      "7233212735005103307": {
        "error_kind": "string",
        "string": "attempt to multiply with overflow"
      },
      "14514982005979867414": {
        "error_kind": "string",
        "string": "attempt to bit-shift with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _84",
    "private parameters indices : [_0, _1, _2]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [_1]:128 bits []",
    "BLACKBOX::RANGE [_2]:128 bits []",
    "EXPR [ (1, _0) (1, _1) -2358023 ]",
    "EXPR [ (-1, _0) (1, _1) -2333333 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ 18446744073709551616 ]], outputs: [_6, _7]",
    "BLACKBOX::RANGE [_6]:64 bits []",
    "BLACKBOX::RANGE [_7]:64 bits []",
    "EXPR [ (1, _0) (-18446744073709551616, _6) (-1, _7) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 0 ], EXPR [ 18446744073709551616 ]], outputs: [_8, _9]",
    "BLACKBOX::RANGE [_8]:64 bits []",
    "BLACKBOX::RANGE [_9]:64 bits []",
    "EXPR [ (1, _1) (-18446744073709551616, _8) (-1, _9) 0 ]",
    "EXPR [ (1, _6, _8) 0 ]",
    "EXPR [ (1, _0, _1) -28957394910 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _0) 0 ]], outputs: [_10]",
    "EXPR [ (1, _0, _10) -1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 0 ], EXPR [ (1, _0) 0 ]], outputs: [_11, _12]",
    "BLACKBOX::RANGE [_12]:128 bits []",
    "EXPR [ (1, _0) (-1, _12) (-1, _13) -1 ]",
    "BLACKBOX::RANGE [_13]:128 bits []",
    "EXPR [ (-1, _0, _11) (1, _1) (-1, _12) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _11) 0 ], EXPR [ 18446744073709551616 ]], outputs: [_14, _15]",
    "BLACKBOX::RANGE [_14]:64 bits []",
    "BLACKBOX::RANGE [_15]:64 bits []",
    "EXPR [ (1, _11) (-18446744073709551616, _14) (-1, _15) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ 18446744073709551616 ]], outputs: [_16, _17]",
    "BLACKBOX::RANGE [_16]:64 bits []",
    "BLACKBOX::RANGE [_17]:64 bits []",
    "EXPR [ (1, _0) (-18446744073709551616, _16) (-1, _17) 0 ]",
    "EXPR [ (1, _14, _16) 0 ]",
    "EXPR [ (1, _11) -190 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _0) 0 ]], outputs: [_18]",
    "EXPR [ (1, _0, _18) -1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 0 ], EXPR [ (1, _0) 0 ]], outputs: [_19, _20]",
    "BLACKBOX::RANGE [_19]:128 bits []",
    "EXPR [ (1, _0) (-1, _20) (-1, _21) -1 ]",
    "BLACKBOX::RANGE [_21]:128 bits []",
    "EXPR [ (-1, _0, _19) (1, _1) (-1, _20) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _19) 0 ], EXPR [ 18446744073709551616 ]], outputs: [_22, _23]",
    "BLACKBOX::RANGE [_22]:64 bits []",
    "BLACKBOX::RANGE [_23]:64 bits []",
    "EXPR [ (1, _19) (-18446744073709551616, _22) (-1, _23) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ 18446744073709551616 ]], outputs: [_24, _25]",
    "BLACKBOX::RANGE [_24]:64 bits []",
    "BLACKBOX::RANGE [_25]:64 bits []",
    "EXPR [ (1, _0) (-18446744073709551616, _24) (-1, _25) 0 ]",
    "EXPR [ (1, _22, _24) 0 ]",
    "EXPR [ (1, _20) -128 ]",
    "EXPR [ (-1, _0) 12345 ]",
    "BLACKBOX::XOR [_0, _1]:128 bits [_26]",
    "EXPR [ (1, _26) -2358007 ]",
    "BLACKBOX::AND [_0, _1]:128 bits [_27]",
    "EXPR [ (1, _27) -8 ]",
    "EXPR [ (-1, _0) (-1, _28) 340282366920938463463374607431768211455 ]",
    "EXPR [ (-1, _1) (-1, _29) 340282366920938463463374607431768211455 ]",
    "BLACKBOX::AND [_28, _29]:128 bits [_30]",
    "EXPR [ (-1, _30) 340282366920938463463374607431765853440 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _2) 340282366920938463463374607431768211328 ], EXPR [ 340282366920938463463374607431768211456 ]], outputs: [_31, _32]",
    "BLACKBOX::RANGE [_32]:129 bits []",
    "EXPR [ (-1, _32) (-1, _33) 340282366920938463463374607431768211455 ]",
    "BLACKBOX::RANGE [_33]:129 bits []",
    "EXPR [ (1, _2) (-340282366920938463463374607431768211456, _31) (-1, _32) 340282366920938463463374607431768211328 ]",
    "EXPR [ (-1, _31) 0 ]",
    "BRILLIG CALL func 2: inputs: [EXPR [ (1, _2) 0 ], EXPR [ 8 ], EXPR [ 2 ]], outputs: [[_34, _35, _36, _37, _38, _39, _40, _41]]",
    "BLACKBOX::RANGE [_34]:1 bits []",
    "BLACKBOX::RANGE [_35]:1 bits []",
    "BLACKBOX::RANGE [_36]:1 bits []",
    "BLACKBOX::RANGE [_37]:1 bits []",
    "BLACKBOX::RANGE [_38]:1 bits []",
    "BLACKBOX::RANGE [_39]:1 bits []",
    "BLACKBOX::RANGE [_40]:1 bits []",
    "BLACKBOX::RANGE [_41]:1 bits []",
    "EXPR [ (1, _2) (-1, _34) (-2, _35) (-4, _36) (-8, _37) (-16, _38) (-32, _39) (-64, _40) (-128, _41) 0 ]",
    "EXPR [ (1, _41, _41) (2, _41) (-1, _42) 1 ]",
    "EXPR [ (-1, _40) (-1, _43) 1 ]",
    "EXPR [ (2, _40, _42) (1, _42, _43) (-1, _44) 0 ]",
    "EXPR [ (1, _44, _44) (-1, _45) 0 ]",
    "EXPR [ (-1, _39) (-1, _46) 1 ]",
    "EXPR [ (2, _39, _45) (1, _45, _46) (-1, _47) 0 ]",
    "EXPR [ (1, _47, _47) (-1, _48) 0 ]",
    "EXPR [ (-1, _38) (-1, _49) 1 ]",
    "EXPR [ (2, _38, _48) (1, _48, _49) (-1, _50) 0 ]",
    "EXPR [ (1, _50, _50) (-1, _51) 0 ]",
    "EXPR [ (-1, _37) (-1, _52) 1 ]",
    "EXPR [ (2, _37, _51) (1, _51, _52) (-1, _53) 0 ]",
    "EXPR [ (1, _53, _53) (-1, _54) 0 ]",
    "EXPR [ (-1, _36) (-1, _55) 1 ]",
    "EXPR [ (2, _36, _54) (1, _54, _55) (-1, _56) 0 ]",
    "EXPR [ (1, _56, _56) (-1, _57) 0 ]",
    "EXPR [ (-1, _35) (-1, _58) 1 ]",
    "EXPR [ (2, _35, _57) (1, _57, _58) (-1, _59) 0 ]",
    "EXPR [ (1, _59, _59) (-1, _60) 0 ]",
    "EXPR [ (-1, _34) (-1, _61) 1 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (2, _60, _34) (1, _60, _61) 0 ]], outputs: [_62]",
    "EXPR [ (2, _34, _60) (1, _60, _61) (-1, _63) 0 ]",
    "EXPR [ (1, _62, _63) -1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ (1, _63) 0 ]], outputs: [_64, _65]",
    "BLACKBOX::RANGE [_65]:128 bits []",
    "EXPR [ (1, _63) (-1, _65) (-1, _66) -1 ]",
    "BLACKBOX::RANGE [_66]:128 bits []",
    "EXPR [ (-1, _63, _64) (1, _0) (-1, _65) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _64) 0 ], EXPR [ 18446744073709551616 ]], outputs: [_67, _68]",
    "BLACKBOX::RANGE [_67]:64 bits []",
    "BLACKBOX::RANGE [_68]:64 bits []",
    "EXPR [ (1, _64) (-18446744073709551616, _67) (-1, _68) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _63) 0 ], EXPR [ 18446744073709551616 ]], outputs: [_69, _70]",
    "BLACKBOX::RANGE [_69]:64 bits []",
    "BLACKBOX::RANGE [_70]:64 bits []",
    "EXPR [ (1, _63) (-18446744073709551616, _69) (-1, _70) 0 ]",
    "EXPR [ (1, _67, _69) 0 ]",
    "EXPR [ (1, _64) -3086 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0, _63) 0 ], EXPR [ 340282366920938463463374607431768211456 ]], outputs: [_71, _72]",
    "BLACKBOX::RANGE [_71]:126 bits []",
    "EXPR [ (-1, _72) (-1, _73) 340282366920938463463374607431768211455 ]",
    "BLACKBOX::RANGE [_73]:129 bits []",
    "EXPR [ (1, _0, _63) (-340282366920938463463374607431768211456, _71) (-1, _72) 0 ]",
    "EXPR [ (1, _71) (-1, _74) 20746827117051438823981594372716013474 ]",
    "BLACKBOX::RANGE [_74]:126 bits []",
    "BRILLIG CALL func 1: inputs: [EXPR [ (-1, _71) 64323764613183177041862057485226039389 ]], outputs: [_75]",
    "EXPR [ (-1, _71, _75) (64323764613183177041862057485226039389, _75) (1, _76) -1 ]",
    "EXPR [ (-1, _71, _76) (64323764613183177041862057485226039389, _76) 0 ]",
    "EXPR [ (-1, _72, _76) (53438638232309528389504892708671455233, _76) (-1, _77) 0 ]",
    "BLACKBOX::RANGE [_77]:129 bits []",
    "EXPR [ (1, _72) -49380 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) (-1, _1) 340282366920938463463374607431768211456 ], EXPR [ 340282366920938463463374607431768211456 ]], outputs: [_78, _79]",
    "BLACKBOX::RANGE [_79]:129 bits []",
    "EXPR [ (-1, _79) (-1, _80) 340282366920938463463374607431768211455 ]",
    "BLACKBOX::RANGE [_80]:129 bits []",
    "EXPR [ (1, _0) (-1, _1) (-340282366920938463463374607431768211456, _78) (-1, _79) 340282366920938463463374607431768211456 ]",
    "EXPR [ (-1, _78) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _0) (1, _1) 340282366920938463463374607431768211456 ], EXPR [ 340282366920938463463374607431768211456 ]], outputs: [_81, _82]",
    "BLACKBOX::RANGE [_82]:129 bits []",
    "EXPR [ (-1, _82) (-1, _83) 340282366920938463463374607431768211455 ]",
    "BLACKBOX::RANGE [_83]:129 bits []",
    "EXPR [ (-1, _0) (1, _1) (-340282366920938463463374607431768211456, _81) (-1, _82) 340282366920938463463374607431768211456 ]",
    "EXPR [ (-1, _81) 1 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _0) (-1, _1) 0 ]], outputs: [_84]",
    "EXPR [ (1, _0, _84) (-1, _1, _84) -1 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]",
    "unconstrained func 1",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]",
    "unconstrained func 2",
    "[Const { destination: Direct(5), bit_size: Integer(U32), value: 0 }, Const { destination: Direct(6), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(7), bit_size: Integer(U32), value: 3 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(7), offset_address: Direct(5) }, Cast { destination: Direct(1), source: Direct(1), bit_size: Integer(U32) }, Const { destination: Direct(9), bit_size: Integer(U32), value: 10 }, BinaryIntOp { destination: Direct(7), op: Add, bit_size: U32, lhs: Direct(9), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(3), op: IntegerDiv, lhs: Direct(0), rhs: Direct(2) }, BinaryFieldOp { destination: Direct(4), op: Mul, lhs: Direct(3), rhs: Direct(2) }, BinaryFieldOp { destination: Direct(4), op: Sub, lhs: Direct(0), rhs: Direct(4) }, Store { destination_pointer: Direct(9), source: Direct(4) }, BinaryIntOp { destination: Direct(9), op: Add, bit_size: U32, lhs: Direct(9), rhs: Direct(6) }, Mov { destination: Direct(0), source: Direct(3) }, BinaryIntOp { destination: Direct(8), op: LessThan, bit_size: U32, lhs: Direct(9), rhs: Direct(7) }, JumpIf { condition: Direct(8), location: 7 }, Const { destination: Direct(9), bit_size: Integer(U32), value: 10 }, Stop { return_data: HeapVector { pointer: Direct(9), size: Direct(1) } }]"
  ],
  "debug_symbols": "pZbNbqswEIXfhTULezz+66tcXVUkIRUSIhFNKl1Fffc7w8y06aIbs+E7CTlfXcA2j+40Hu5vr9Nyvrx3L38e3WGd5nl6e50vx+E2XRb69vHZd/bx9baOI33VPZ2n1nVYx+XWvSz3ee67j2G+bz96vw7Lxtuw0lnXd+NyIpLwPM0jp8/+u+1+r3qIWvbhux5b+lhb+ilZP/t9/doyfnBZ++BhXz+0jB+wWD+Gff3cNP5SrV9xVz/4lvGHYA9vwJbxh/j19xPu65eW8aOz8aOL+/rQMn5Eb31M+/qpafwFrF/Krn50Lf34tf7Epvn31I9N/WTzL+awr19bnv/k7PlNPu7rh6Z+tPuX8s/795c+Dcdp/bHjdUBLRt8FuvF9h/TDvovbMW3HvB3Ldqzb0TuBF4CA+rTsexLQ6uujIAmyoAjqBnACLwBBEIgFxAJiAbGAWEAsgSx0twJZ6KIFEAQBCqIgCbKgCOoGdAKxoFhQLCgWFAuKBcni6RYgaTzNVqy87dKFc7xpEz1vvkRSeb6ggbdFIiqjMvEmS2Qf/R+xKKswOaVXgjIoURmVSam+pL6kvqy+rL6svqy+rL6svqy+rL6svqy+or6ivqK+or6ivqK+or6ivqK+or6qvqq+qr6qvqq+qr6qvqq+qr6qPu+cBW8BLAQLaCFaSBayhWLBzDwLfOXg+ZWDA1gIFtBCtJAsZAvFQtXAM0OCmcHMPD/Ac2AzcIgWkoVsoVhgc+A5ymbk4C2AhWABLbB5m9ls5rnNcwd4R/sY1mk4zKO+MJ/vy/Hp/fn272pn7A37ul6O4+m+jrzybOdoLfoP",
  "file_map": {
    "50": {
      "source": "fn main(x: u128, y: u128, z: u128) {\n    let const_x = 12345;\n    let const_y = 2345678;\n    let const_z = 2;\n\n    assert_eq(x + y, const_x + const_y);\n    assert_eq(y - x, const_y - const_x);\n    assert_eq(x * y, const_x * const_y);\n    assert_eq(y / x, const_y / const_x);\n    assert_eq(y % x, const_y % const_x);\n    assert_eq(!x, !const_x);\n    assert_eq(x ^ y, const_x ^ const_y);\n    assert_eq(x & y, const_x & const_y);\n    assert_eq(x | y, const_x | const_y);\n    assert_eq(x >> z, const_x >> const_z);\n    assert_eq(x << z, const_x << const_z);\n    assert_eq(x < y, const_x < const_y);\n    assert_eq(x <= y, const_x <= const_y);\n    assert_eq(x != y, const_x != const_y);\n    assert_eq(y > x, const_y > const_x);\n    assert_eq(y >= x, const_y >= const_x);\n}\n",
      "path": ""
    }
  },
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
